--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ isort = "5.10.1"
 pep8-naming = "0.13.0"
 pydocstyle = "6.1.1"
 mypy = "0.942"
-unimport = "0.9.5"
+unimport = "^0.12.1"
 
 # check times in tests
 contexttimer = "^0.3.3"
